# bump-my-version

./: .buildinfo  .changelog-config.yaml  .composition.yaml  .cookiecutter.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  action.yml  changelog.html  command_line_interface.md  configuration_options.md  contributing.html  devenv.nix  devenv.yaml  file_handling.md  genindex.html  index.html  integrating_with_ci_cd.md  justfile  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  quickstart.md  readme.html  search.html  searchindex.js  (+5 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build-docs.yaml  bumpversion-pr.yaml  bumpversion.yaml  ci.yaml  docs-final.yml  docs-preview.yml  release.yaml  test.yaml  version-preview.yaml  version.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
_modules/: index.html
_modules/bumpversion/: aliases.html  autocast.html  bump.html  config.html  exceptions.html  files.html  functions.html  indented_logger.html  logging.html  scm.html  show.html  ui.html  utils.html  version_part.html  visualize.html  yaml_dump.html
_sources/: index.md.txt
_sources/explanation/: index.md.txt
_sources/howtos/: avoid-incorrect-replacements.md.txt  custom-version-formats-by-file.md.txt  index.md.txt
_sources/reference/: cli.rst.txt  search-and-replace-config.md.txt  version-parts.md.txt
_sources/tutorials/: semantic-versioning-example.md.txt
_static/: documentation_options.js
_static/css/: custom.css
assets/css/: cards.css
bump_version/: cli.py
bump_version/commands/: __init__.py  say_hello.py
bumpversion/: __init__.py  __main__.py  aliases.py  autocast.py  bump.py  cli.py  cli_options.py  click_config.py  config.py  context.py  exceptions.py  files.py  functions.py  hooks.py  indented_logger.py  logging.py  scm.py  scm_old.py  show.py  ui.py  utils.py  version_part.py  visualize.py  yaml_dump.py
bumpversion/commands/: __init__.py  bump.py  replace.py  sample_config.py  show.py  show_bump.py
bumpversion/config/: __init__.py  create.py  files.py  files_legacy.py  models.py  utils.py
bumpversion/scm/: __init__.py  git.py  hg.py  models.py
bumpversion/versioning/: conventions.py  functions.py  models.py  serialization.py  version_config.py
docs/: gen_doc_stubs.py  index.md
docs/assets/: bump-my-version-model.drawio
docs/explanation/: index.md  mental-model.md  show-subcommand.md  version-parts.md
docs/howtos/: avoid-incorrect-replacements.md  calver.md  custom-version-formats-by-file.md  index.md  multiple-replacements.md  update-a-date.md
docs/reference/: calver_reference.md  cli.md  configuration.md  formatting-context.md  hooks.md  index.md  movable-version-tags.md  plugin-specs.md  search-and-replace-config.md  version-parts.md
docs/tutorials/: getting-started.md  index.md  nav.md  semantic-versioning-example.md  usage.md
docsrc/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  api.rst  bump-my-version-model.drawio  changelog.md  cli.rst  conf.py  configuration.md  contributing.md  formatting-context.md  index.md  make.bat  search-and-replace.md  usage.md  version-parts.md
docsrc/explanation/: index.md  mental-model.md
docsrc/howtos/: avoid-incorrect-replacements.md  index.md  update-a-date.md
docsrc/reference/: calver_reference.md  cli.md  cli.rst  configuration.md  formatting-context.md  index.md  search-and-replace-config.md
docsrc/tutorials/: index.md  semantic-versioning-example.md  usage.md
explanation/: index.html  mental-model.html
explanation/mental-model/: index.html
explanation/show-subcommand/: index.html
explanation/version-parts/: index.html
howtos/: avoid-incorrect-replacements.html  custom-version-formats-by-file.html  index.html  multiple-replacements.html  update-a-date.html
howtos/avoid-incorrect-replacements/: index.html
howtos/calver/: index.html
howtos/custom-version-formats-by-file/: index.html
howtos/multiple-replacements/: index.html
howtos/nav/: index.html
howtos/update-a-date/: index.html
overrides/partials/: comments.html
pr-preview/pr-147/: 404.html  index.html  objects.inv
pr-preview/pr-151/: 404.html
pr-preview/pr-155/: objects.inv
pr-preview/pr-158/: 404.html  index.html
pr-preview/pr-162/: 404.html
pr-preview/pr-269/: 404.html
pr-preview/pr-281/: 404.html  objects.inv
pr-preview/pr-293/: index.html
pr-preview/pr-295/: 404.html  index.html  objects.inv
pr-preview/pr-297/: 404.html  index.html
pr-preview/pr-299/: index.html
pr-preview/pr-307/: 404.html  index.html
pr-preview/pr-308/: 404.html
pr-preview/pr-309/: objects.inv
pr-preview/pr-325/: objects.inv
pr-preview/pr-326/: 404.html
pr-preview/pr-347/: index.html
pr-preview/pr-351/: index.html
pr-preview/pr-356/: 404.html
pr-preview/pr-359/: index.html
pr-preview/pr-369/: index.html
pr-preview/pr-398/: index.html  objects.inv
pr-preview/pr-399/: objects.inv
pr-preview/pr-400/: 404.html
pr-preview/pr-402/: index.html
reference/: cli.html  configuration.html  formatting-context.html  index.html  search-and-replace-config.html  version-parts.html
reference/api/: SUMMARY.html
reference/bumpversion/: bumpversion.__main__.html  bumpversion.aliases.html  bumpversion.html  (+26 more)
requirements/: Makefile  dev.in  dev.txt  docs.in  docs.txt  prod.in  prod.txt  test.in  test.txt
search/: search_index.json
tests/: __init__.py  conftest.py  test_autocast.py  test_bump.py  test_cli.py  test_click_config.py  test_config.py  test_configuredfile.py  test_context.py  test_files.py  test_files_configuredfile.py  test_functions.py  test_indented_logger.py  test_scm.py  test_scm_old.py  test_show.py  test_utils.py  test_version_part.py  test_visualize.py  test_yaml.py
tools/: bump.sh  create-release.sh  drawioexport.py  gen-codeowners.sh  generate-requirements.sh  update_frontmatter.py
tutorials/: index.html  semantic-versioning-example.html  usage.html
(+2800 files in other folders)
