[metadata]
name = bump_version
version = attr:bump_version.__version__
description = Version bump your Python project
url = https://github.com/callowayproject/bump-my-version
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Natural Language :: English
	Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown
keywords = bump_version

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
	example*
	tests*
	docs*
	build

[darglint]
ignore = DAR402

[bumpversion]
current_version = 0.1.0
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+[-_\w]+?\.(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}+{$BRANCH_NAME}.{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:file(version heading):CHANGELOG.md]
search = Unreleased

[bumpversion:file(previous version):CHANGELOG.md]
search = {current_version}...HEAD
replace = {current_version}...{new_version}

[options.entry_points]
console_scripts =
	bump-my-version = bump_version.cli:cli
