[metadata]
name = bump-my-version
version = attr:bumpversion.__version__
description = Version bump your Python project
url = https://github.com/callowayproject/bump-my-version
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Natural Language :: English
	Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown
keywords = bumpversion

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
	example*
	tests*
	docs*
	build

[darglint]
ignore = DAR402

[options.entry_points]
console_scripts =
	bump-my-version = bumpversion.cli:cli
	bumpversion = bumpversion.cli:cli
